created new joblib files for flask app to solve compatibility issues

--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
     "# textblob will be used to perform sentiment analysis down the road\n",
     "# from textblob import TextBlob\n",
     "\n",
-    "# Data is large and will need to be unzipped\n",
-    "import zipfile\n",
+    "# # Data is large and will need to be unzipped\n",
+    "# import zipfile\n",
     "\n",
-    "# unzipping file\n",
-    "with zipfile.ZipFile(\"./data_collection/final_data/DF_v1.pkl.zip\",\"r\") as zip_ref:\n",
-    "    zip_ref.extractall(\".\")\n",
+    "# # unzipping file\n",
+    "# with zipfile.ZipFile(\"./data_collection/final_data/DF_v1.pkl.zip\",\"r\") as zip_ref:\n",
+    "#     zip_ref.extractall(\".\")\n",
     "\n",
-    "# reading in pickled data\n",
+    "# # reading in pickled data\n",
     "song_list = pd.read_pickle(\"./DF_v1.pkl\")"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "(728156, 12)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "       0.8       , 0.87      ])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "        652499, 267268, 161932, 587960,  79755]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "Name: songid, Length: 728156, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,18 +518,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "63349596"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-114c8637e68c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetsizeof\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msong_id_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sys' is not defined"
+     ]
     }
    ],
    "source": [
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -644,26 +645,20 @@
      "text": [
       "Loading dataframe...\n",
       "Dataframe Object Created\n",
-      "Loading pickled scaler...\n",
-      "Pickled scaler loaded\n",
-      "Scaling dataframe object...\n",
-      "Dataframe scaled\n",
-      "Loading pickled model...\n",
-      "Model loaded\n",
-      "Prediction executed\n"
+      "Loading pickled scaler...\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([[544125,  70403, 241457, 139664, 429125, 201196, 121356,  44604,\n",
-       "         44006, 229748,  94011, 673349, 389170, 275568, 709882, 136401,\n",
-       "        104441, 138592, 138183, 600579, 483685]])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f66d5e90177c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-95fb355ce8eb>\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(content)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Dataframe Object Created'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Loading pickled scaler...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0mscaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'models/scaler.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Pickled scaler loaded'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Scaling dataframe object...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
+     ]
     }
    ],
    "source": [
@@ -774,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +790,7 @@
     "    }\n",
     "}\n",
     "\n",
+    "\n",
     "def predict(content):\n",
     "    similar_songs = []\n",
     "    print('Loading dataframe...')\n",
@@ -803,18 +799,18 @@
     "                                orient='columns')\n",
     "    print('Dataframe Object Created')\n",
     "    print('Loading pickled scaler...')\n",
-    "    scalar = load('scalar.joblib')\n",
+    "    scalar = load('scalar2.joblib')\n",
     "    print('Pickled scaler loaded')\n",
     "    print('Scaling dataframe object...')\n",
     "    dataframe_scaled = scalar.transform(dataframe)\n",
     "    print('Dataframe scaled')\n",
     "    print('Loading pickled model...')\n",
-    "    model = load('model.joblib')\n",
+    "    model = load('model2.joblib')\n",
     "    print('Model loaded')\n",
     "    results = model.kneighbors([dataframe_scaled][0])[1]\n",
     "    print('Prediction executed')\n",
     "    print('song_id_list loading...')\n",
-    "    song_id_list = load('Flask_API/SOUNDDRIP/data/song_id_list.joblib', 'rb')\n",
+    "    song_id_list = load('song_id_list2.joblib', 'rb')\n",
     "    print('song_id_list loaded')\n",
     "    \n",
     "    print('beginning for loop...')\n",
@@ -827,14 +823,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
       "Wall time: 6.2 µs\n",
       "Loading dataframe...\n",
       "Dataframe Object Created\n",
@@ -852,7 +848,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "//anaconda3/envs/NLPEnv/lib/python3.7/contextlib.py:112: UserWarning: mmap_mode \"rb\" is not compatible with compressed file Flask_API/SOUNDDRIP/data/song_id_list.joblib. \"rb\" flag will be ignored.\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/contextlib.py:112: UserWarning: mmap_mode \"rb\" is not compatible with compressed file song_id_list2.joblib. \"rb\" flag will be ignored.\n",
       "  return next(self.gen)\n"
      ]
     },
@@ -889,7 +885,7 @@
        "  {'similarity': [0.99], 'values': '3XDBH8yNPbCfuO5xKW1nHI'}]}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,106 +897,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model.joblib']"
+       "['model2.joblib']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(model, 'model.joblib', compress=True)"
+    "dump(model, 'model2.joblib', compress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
-      "Wall time: 5.25 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%time\n",
+    "# %time\n",
     "\n",
-    "pickle_loaded = pickle.load(open('Flask_API/SOUNDDRIP/models/knn_model_v1.pkl', 'rb'))\n",
-    "joblib_loaded = load('model.joblib')\n",
+    "# pickle_loaded = pickle.load(open('Flask_API/SOUNDDRIP/models/knn_model_v1.pkl', 'rb'))\n",
+    "# joblib_loaded = load('model.joblib')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['data_scaled.joblib']"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dump(data_scaled, 'data_scaled.joblib', compress=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['scalar.joblib']"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dump(scaler, 'scalar.joblib', compress=True)\n",
     "# dump(data_scaled, 'data_scaled.joblib', compress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['song_id_list.joblib']"
+       "['scalar2.joblib']"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(song_id_array, 'song_id_array.joblib', compress=True)\n",
-    "dump(song_id_list, 'song_id_list.joblib', compress=True)"
+    "dump(scaler, 'scalar2.joblib', compress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['song_id_list2.joblib']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dump(song_id_list, 'song_id_list2.joblib', compress=True)"
    ]
   },
   {
@@ -1013,9 +987,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLPEnv (Python3)",
+   "display_name": "model_notebooks",
    "language": "python",
-   "name": "nlpenv"
+   "name": "model_notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1027,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
