Revert "reverting commit"
This reverts commit 47b00f3519e7afe729bbbba79ae824b2c96e1cad.

--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -580,13 +580,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
-    "filename = 'Flask_API/SOUNDDRIP/data/song_id_list.pkl'\n",
+    "filename = 'song_id_list2.pkl'\n",
     "pickle.dump(song_id_list, open(filename, 'wb'))"
    ]
   },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
     "    results = model.kneighbors([dataframe_scaled][0])[1]\n",
     "    print('Prediction executed')\n",
     "    print('song_id_list loading...')\n",
-    "    song_id_list = load('song_id_list2.joblib', 'rb')\n",
+    "    song_id_list = load('song_id_list2.joblib')\n",
     "    print('song_id_list loaded')\n",
     "    \n",
     "    print('beginning for loop...')\n",
@@ -823,15 +823,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 6.2 µs\n",
       "Loading dataframe...\n",
       "Dataframe Object Created\n",
       "Loading pickled scaler...\n",
@@ -841,21 +839,7 @@
       "Loading pickled model...\n",
       "Model loaded\n",
       "Prediction executed\n",
-      "song_id_list loading...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/contextlib.py:112: UserWarning: mmap_mode \"rb\" is not compatible with compressed file song_id_list2.joblib. \"rb\" flag will be ignored.\n",
-      "  return next(self.gen)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "song_id_list loading...\n",
       "song_id_list loaded\n",
       "beginning for loop...\n"
      ]
@@ -885,13 +869,14 @@
        "  {'similarity': [0.99], 'values': '3XDBH8yNPbCfuO5xKW1nHI'}]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time\n",
+    "%timeit\n",
+    "\n",
     "predict(content)"
    ]
   },
