--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,26 +57,57 @@
     "    for song_row in results[0][1:]:\n",
     "        song_id = song_id_list[song_row]\n",
     "        similar_songs.append(baseurl + song_id)\n",
-    "    print(f'Source Song for {track} by {artist}:\\n')\n",
-    "    print(f'Source URL: {baseurl + sourcetrack}\\n')\n",
-    "    print(similar_songs)"
+    "    print(f'Source URL for \"{track}\" by \"{artist}\":\\n')\n",
+    "    print(f'{baseurl} + {sourcetrack} \\n')\n",
+    "    print(f' Paste Results into your browser: \\n')\n",
+    "    return similar_songs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source Song for We Are One by The Offspring:\n",
+      "Source URL for \"We Are One\" by \"The Offspring\":\n",
       "\n",
-      "Source URL: https://open.spotify.com/track/5jSBMsmCD2saSHxFNhcklm\n",
+      "https://open.spotify.com/track/ + 5jSBMsmCD2saSHxFNhcklm \n",
       "\n",
-      "['https://open.spotify.com/track/1EQazXNkdLui1FPmCfmKwQ', 'https://open.spotify.com/track/5dSDProyMRkcQjYUX9hxvu', 'https://open.spotify.com/track/2nN0TuOh8mYG7Gvu5LJTWM', 'https://open.spotify.com/track/7dFV6iIkHlhQDIkmx3o2Hf', 'https://open.spotify.com/track/3gEqeV6EwaOEy4p7hrTPCW', 'https://open.spotify.com/track/46ey5AuTuH6EsoevCpWjbm', 'https://open.spotify.com/track/4iaYoP7xHTwhLHGHBLlY0I', 'https://open.spotify.com/track/7AJSXNOwmHjCHeYUuy9hnq', 'https://open.spotify.com/track/5x63wo2rvKpRglhsXpJ7f4', 'https://open.spotify.com/track/1ca9bzgddAFf3d1qs2Hgq2', 'https://open.spotify.com/track/55E87i38kI81gLD2Ccljzy', 'https://open.spotify.com/track/4r9GzEzfq6nfVmThPwUlPO', 'https://open.spotify.com/track/5VVBhrl7kLswWfQFgnYnjc', 'https://open.spotify.com/track/30CWdgDkoMWHlmwuWoBhSx', 'https://open.spotify.com/track/5Sh3ryYxqOqHMW7oCQy9Cs', 'https://open.spotify.com/track/4e831DgyEPaeviCqxCCdeH', 'https://open.spotify.com/track/5Uu0dsqjlIVEy9h6tGIcML', 'https://open.spotify.com/track/2UhDrIkSMDBMpNf67YRAq9', 'https://open.spotify.com/track/6HmrdpoAWsYTC6nE339rE4', 'https://open.spotify.com/track/3FxfjoFarSIWKtAXk7TBOE']\n"
+      " Paste Results into your browser: \n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['https://open.spotify.com/track/1EQazXNkdLui1FPmCfmKwQ',\n",
+       " 'https://open.spotify.com/track/5dSDProyMRkcQjYUX9hxvu',\n",
+       " 'https://open.spotify.com/track/2nN0TuOh8mYG7Gvu5LJTWM',\n",
+       " 'https://open.spotify.com/track/7dFV6iIkHlhQDIkmx3o2Hf',\n",
+       " 'https://open.spotify.com/track/3gEqeV6EwaOEy4p7hrTPCW',\n",
+       " 'https://open.spotify.com/track/46ey5AuTuH6EsoevCpWjbm',\n",
+       " 'https://open.spotify.com/track/4iaYoP7xHTwhLHGHBLlY0I',\n",
+       " 'https://open.spotify.com/track/7AJSXNOwmHjCHeYUuy9hnq',\n",
+       " 'https://open.spotify.com/track/5x63wo2rvKpRglhsXpJ7f4',\n",
+       " 'https://open.spotify.com/track/1ca9bzgddAFf3d1qs2Hgq2',\n",
+       " 'https://open.spotify.com/track/55E87i38kI81gLD2Ccljzy',\n",
+       " 'https://open.spotify.com/track/4r9GzEzfq6nfVmThPwUlPO',\n",
+       " 'https://open.spotify.com/track/5VVBhrl7kLswWfQFgnYnjc',\n",
+       " 'https://open.spotify.com/track/30CWdgDkoMWHlmwuWoBhSx',\n",
+       " 'https://open.spotify.com/track/5Sh3ryYxqOqHMW7oCQy9Cs',\n",
+       " 'https://open.spotify.com/track/4e831DgyEPaeviCqxCCdeH',\n",
+       " 'https://open.spotify.com/track/5Uu0dsqjlIVEy9h6tGIcML',\n",
+       " 'https://open.spotify.com/track/2UhDrIkSMDBMpNf67YRAq9',\n",
+       " 'https://open.spotify.com/track/6HmrdpoAWsYTC6nE339rE4',\n",
+       " 'https://open.spotify.com/track/3FxfjoFarSIWKtAXk7TBOE']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
