--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
     "        song_id = song_id_list[song_row]\n",
     "        similar_songs.append(baseurl + song_id)\n",
     "    print(f'Source URL for \"{track}\" by \"{artist}\":\\n')\n",
-    "    print(f'{baseurl} + {sourcetrack} \\n')\n",
+    "    print(f'{baseurl + sourcetrack} \\n')\n",
     "    print(f' Paste Results into your browser: \\n')\n",
     "    return similar_songs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
      "text": [
       "Source URL for \"We Are One\" by \"The Offspring\":\n",
       "\n",
-      "https://open.spotify.com/track/ + 5jSBMsmCD2saSHxFNhcklm \n",
+      "https://open.spotify.com/track/5jSBMsmCD2saSHxFNhcklm \n",
       "\n",
       " Paste Results into your browser: \n",
       "\n"
@@ -105,7 +105,7 @@
        " 'https://open.spotify.com/track/3FxfjoFarSIWKtAXk7TBOE']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
