--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,42 +39,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(songdf,artist,track):\n",
-    "    similar_songs = []\n",
-    "    baseurl = 'https://open.spotify.com/track/'\n",
-    "    results = songdf[(songdf[\"artist\"].str.contains(artist)) & (songdf[\"track\"].str.contains(track))]\n",
-    "    sourcetrack = results['songid'].iloc[0]\n",
-    "    results = results.drop([\"artist\",\"track\",\"duration_ms\",\"songid\"],axis=1)\n",
-    "    scalar = load(rootpath + 'Flask_API/SOUNDDRIP/models/scalar2.joblib')\n",
-    "    dataframe_scaled = scalar.transform(results)\n",
-    "    model = load(rootpath + 'Flask_API/SOUNDDRIP/models/model2.joblib')\n",
-    "    results = model.kneighbors([dataframe_scaled][0])[1]\n",
-    "    song_id_list = load(rootpath + 'Flask_API/SOUNDDRIP/data/song_id_list2.pkl')\n",
-    "    for song_row in results[0][1:]:\n",
-    "        song_id = song_id_list[song_row]\n",
-    "        similar_songs.append(baseurl + song_id)\n",
-    "    print(f'Source URL for \"{track}\" by \"{artist}\":\\n')\n",
-    "    print(f'{baseurl + sourcetrack} \\n')\n",
-    "    print(f' Paste Results into your browser: \\n')\n",
-    "    return similar_songs"
+    "songdf = songdf.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "songdf = songdf.drop(columns=\"index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "songdf.loc[[117524], ['track']] = \"Mashin For Mine / Summer In The City\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(artist,track):\n",
+    "    similar_songs = []\n",
+    "    baseurl = 'https://open.spotify.com/track/'\n",
+    "    try: \n",
+    "        results = songdf[(songdf[\"artist\"].str.contains(artist,case=False,regex=True)) & (songdf[\"track\"].str.contains(track,case=False,regex=True))]\n",
+    "        sourcetrackartist = results['artist'].iloc[0]\n",
+    "        sourcetracktrack = results['track'].iloc[0]\n",
+    "        sourcetrackid = results['songid'].iloc[0]\n",
+    "        results = results.drop([\"artist\",\"track\",\"duration_ms\",\"songid\"],axis=1)\n",
+    "        scalar = load(rootpath + 'Flask_API/SOUNDDRIP/models/scalar2.joblib')\n",
+    "        dataframe_scaled = scalar.transform(results)\n",
+    "        model = load(rootpath + 'Flask_API/SOUNDDRIP/models/model2.joblib')\n",
+    "        results = model.kneighbors([dataframe_scaled][0])[1]\n",
+    "        song_id_list = load(rootpath + 'Flask_API/SOUNDDRIP/data/song_id_list2.pkl')\n",
+    "        for song_row in results[0][1:]:\n",
+    "            song_id = song_id_list[song_row]\n",
+    "            similar_songs.append(baseurl + song_id)\n",
+    "        print(f'Source URL for \"{sourcetracktrack}\" by \"{sourcetrackartist}\":\\n')\n",
+    "        print(f'{baseurl + sourcetrackid} \\n')\n",
+    "        print(f' Paste Results into your browser: \\n')\n",
+    "        return similar_songs\n",
+    "    except:\n",
+    "        print(\"Song not available try tnother\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source URL for \"We Are One\" by \"The Offspring\":\n",
+      "Source URL for \"Mysterious Blues\" by \"Charles Mingus\":\n",
       "\n",
-      "https://open.spotify.com/track/5jSBMsmCD2saSHxFNhcklm \n",
+      "https://open.spotify.com/track/68sul6RgkT96VXCZ6GOw7S \n",
       "\n",
       " Paste Results into your browser: \n",
       "\n"
@@ -83,35 +115,35 @@
     {
      "data": {
       "text/plain": [
-       "['https://open.spotify.com/track/1EQazXNkdLui1FPmCfmKwQ',\n",
-       " 'https://open.spotify.com/track/5dSDProyMRkcQjYUX9hxvu',\n",
-       " 'https://open.spotify.com/track/2nN0TuOh8mYG7Gvu5LJTWM',\n",
-       " 'https://open.spotify.com/track/7dFV6iIkHlhQDIkmx3o2Hf',\n",
-       " 'https://open.spotify.com/track/3gEqeV6EwaOEy4p7hrTPCW',\n",
-       " 'https://open.spotify.com/track/46ey5AuTuH6EsoevCpWjbm',\n",
-       " 'https://open.spotify.com/track/4iaYoP7xHTwhLHGHBLlY0I',\n",
-       " 'https://open.spotify.com/track/7AJSXNOwmHjCHeYUuy9hnq',\n",
-       " 'https://open.spotify.com/track/5x63wo2rvKpRglhsXpJ7f4',\n",
-       " 'https://open.spotify.com/track/1ca9bzgddAFf3d1qs2Hgq2',\n",
-       " 'https://open.spotify.com/track/55E87i38kI81gLD2Ccljzy',\n",
-       " 'https://open.spotify.com/track/4r9GzEzfq6nfVmThPwUlPO',\n",
-       " 'https://open.spotify.com/track/5VVBhrl7kLswWfQFgnYnjc',\n",
-       " 'https://open.spotify.com/track/30CWdgDkoMWHlmwuWoBhSx',\n",
-       " 'https://open.spotify.com/track/5Sh3ryYxqOqHMW7oCQy9Cs',\n",
-       " 'https://open.spotify.com/track/4e831DgyEPaeviCqxCCdeH',\n",
-       " 'https://open.spotify.com/track/5Uu0dsqjlIVEy9h6tGIcML',\n",
-       " 'https://open.spotify.com/track/2UhDrIkSMDBMpNf67YRAq9',\n",
-       " 'https://open.spotify.com/track/6HmrdpoAWsYTC6nE339rE4',\n",
-       " 'https://open.spotify.com/track/3FxfjoFarSIWKtAXk7TBOE']"
+       "['https://open.spotify.com/track/07vWECuSPPGuLtgDsKjFpH',\n",
+       " 'https://open.spotify.com/track/7pOqhU1qAuztIJAZPE9euA',\n",
+       " 'https://open.spotify.com/track/2gvC0LvRT1SywLoAUn6mpJ',\n",
+       " 'https://open.spotify.com/track/5kfMK2NR4aHUZihf4X1TmX',\n",
+       " 'https://open.spotify.com/track/5RnAqy2y9k8iPPgOgfgnfL',\n",
+       " 'https://open.spotify.com/track/5u44fxHnBRTm0fvhJ96xF6',\n",
+       " 'https://open.spotify.com/track/66WdiO3hTfALU9XzT5yjQD',\n",
+       " 'https://open.spotify.com/track/3k3nVFLnWCkhuKQTZOnioK',\n",
+       " 'https://open.spotify.com/track/2uwN3PDudlRkAKE3wA0OqJ',\n",
+       " 'https://open.spotify.com/track/2P9pZ7nvNLjbGoyUkDW0uz',\n",
+       " 'https://open.spotify.com/track/7hprRJCryRlzKcVWGLmYZ3',\n",
+       " 'https://open.spotify.com/track/3AFqF9dB0W2Q330YLINMMg',\n",
+       " 'https://open.spotify.com/track/31eivkYRGNUWHvhHKivdu6',\n",
+       " 'https://open.spotify.com/track/4ud32i87FJondAYpnVphFD',\n",
+       " 'https://open.spotify.com/track/5YlCq3RoCO2YSMiK51x5Jh',\n",
+       " 'https://open.spotify.com/track/0gwzu9Q24dIhgkhPdQNaLS',\n",
+       " 'https://open.spotify.com/track/3CNEJhpXkoNnEINDEkAq9k',\n",
+       " 'https://open.spotify.com/track/0UQUoI94W9xliT8xGlgpDY',\n",
+       " 'https://open.spotify.com/track/0ZzRFRDztzbdH0w2HwyRsm',\n",
+       " 'https://open.spotify.com/track/4Sr1dLwKBxw6YmJpNZ7Ijz']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict(songdf,\"The Offspring\",\"We Are One\")"
+    "predict(\"Charles Mingus\",\"Blues\")"
    ]
   },
   {
