running a new query

--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "            similar_songs.append(baseurl + song_id)\n",
     "        print(f'Source URL for \"{sourcetracktrack}\" by \"{sourcetrackartist}\":\\n')\n",
     "        print(f'{baseurl + sourcetrackid} \\n')\n",
-    "        print(f' Paste Results into your browser: \\n')\n",
+    "        print(f' Paste Results into your browser or Spotify desktop app: \\n')\n",
     "        return similar_songs\n",
     "    except:\n",
     "        print(\"Song not available try tnother\")"
@@ -97,53 +97,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source URL for \"Mysterious Blues\" by \"Charles Mingus\":\n",
+      "Source URL for \"In Spite of Ourselves\" by \"John Prine\":\n",
       "\n",
-      "https://open.spotify.com/track/68sul6RgkT96VXCZ6GOw7S \n",
+      "https://open.spotify.com/track/1k691v8ChLgDiuLLKnjyj6 \n",
       "\n",
-      " Paste Results into your browser: \n",
+      " Paste Results into your browser or Spotify desktop app: \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['https://open.spotify.com/track/07vWECuSPPGuLtgDsKjFpH',\n",
-       " 'https://open.spotify.com/track/7pOqhU1qAuztIJAZPE9euA',\n",
-       " 'https://open.spotify.com/track/2gvC0LvRT1SywLoAUn6mpJ',\n",
-       " 'https://open.spotify.com/track/5kfMK2NR4aHUZihf4X1TmX',\n",
-       " 'https://open.spotify.com/track/5RnAqy2y9k8iPPgOgfgnfL',\n",
-       " 'https://open.spotify.com/track/5u44fxHnBRTm0fvhJ96xF6',\n",
-       " 'https://open.spotify.com/track/66WdiO3hTfALU9XzT5yjQD',\n",
-       " 'https://open.spotify.com/track/3k3nVFLnWCkhuKQTZOnioK',\n",
-       " 'https://open.spotify.com/track/2uwN3PDudlRkAKE3wA0OqJ',\n",
-       " 'https://open.spotify.com/track/2P9pZ7nvNLjbGoyUkDW0uz',\n",
-       " 'https://open.spotify.com/track/7hprRJCryRlzKcVWGLmYZ3',\n",
-       " 'https://open.spotify.com/track/3AFqF9dB0W2Q330YLINMMg',\n",
-       " 'https://open.spotify.com/track/31eivkYRGNUWHvhHKivdu6',\n",
-       " 'https://open.spotify.com/track/4ud32i87FJondAYpnVphFD',\n",
-       " 'https://open.spotify.com/track/5YlCq3RoCO2YSMiK51x5Jh',\n",
-       " 'https://open.spotify.com/track/0gwzu9Q24dIhgkhPdQNaLS',\n",
-       " 'https://open.spotify.com/track/3CNEJhpXkoNnEINDEkAq9k',\n",
-       " 'https://open.spotify.com/track/0UQUoI94W9xliT8xGlgpDY',\n",
-       " 'https://open.spotify.com/track/0ZzRFRDztzbdH0w2HwyRsm',\n",
-       " 'https://open.spotify.com/track/4Sr1dLwKBxw6YmJpNZ7Ijz']"
+       "['https://open.spotify.com/track/1GpBKCgTE36OcXo31Lczfm',\n",
+       " 'https://open.spotify.com/track/69c3Wl5T403bSguMAChBrQ',\n",
+       " 'https://open.spotify.com/track/5Uj8HsBIMHazq25i01MTBr',\n",
+       " 'https://open.spotify.com/track/1mNSRoPAoN46kkWrpPNPbn',\n",
+       " 'https://open.spotify.com/track/5bozEdb0TmHWm2l3WycChm',\n",
+       " 'https://open.spotify.com/track/7bx61QNxXYml26aIWs1qgq',\n",
+       " 'https://open.spotify.com/track/4ttkCOm2gP96QgZ4wIMVup',\n",
+       " 'https://open.spotify.com/track/3Mf07yl9BYhL3q2wZdxx6E',\n",
+       " 'https://open.spotify.com/track/7t0GWb6NnzQ71vXE8Ck8NQ',\n",
+       " 'https://open.spotify.com/track/67rre5G3WNEQVB83vaZ4Ik',\n",
+       " 'https://open.spotify.com/track/3FiWMIJGF3bBKTlfgMtSDH',\n",
+       " 'https://open.spotify.com/track/3jRHXv5LZLQ8LMVDHR4UYS',\n",
+       " 'https://open.spotify.com/track/4w74JUePQ6FfaUlpLAG0En',\n",
+       " 'https://open.spotify.com/track/7s8aaehJPGjlsYS2sms535',\n",
+       " 'https://open.spotify.com/track/5RtkSGx5aSrPQpdwUq5bfr',\n",
+       " 'https://open.spotify.com/track/7BouMSNhqPKQr4UElON59R',\n",
+       " 'https://open.spotify.com/track/3xVYHRXGgMISYnyGee9Lkb',\n",
+       " 'https://open.spotify.com/track/5cNw7IwtzcZhMA8CDVKTRB',\n",
+       " 'https://open.spotify.com/track/2Q4u2zDWQfWc2zgPSEYacO',\n",
+       " 'https://open.spotify.com/track/0tP6mrtcLOYPDmE0QNA1Q7']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict(\"Charles Mingus\",\"Blues\")"
+    "predict(\"John Prine\",\"In Spite\")"
    ]
   },
   {
