Updated input for predict function

--- a/model_notebooks/knn_model_v1.ipynb
+++ b/model_notebooks/knn_model_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "#     zip_ref.extractall(\".\")\n",
     "\n",
     "# # reading in pickled data\n",
-    "song_list = pd.read_pickle(\"./DF_v1.pkl\")"
+    "# song_list = pd.read_pickle(\"./DF_v1.pkl\")"
    ]
   },
   {
@@ -768,8 +768,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Pridict Function Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spotipy\n",
+    "import spotipy.util as util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USERNAME = 'rileypence4' #your spotify username\n",
+    "CLIENT_ID = '47c4f0d3dcaa433c9ef4ec6686e5b1f1' #set at your developer account\n",
+    "CLIENT_SECRET = '65812a5fb52b4a3486f59ec672d499ff' #set at your developer account\n",
+    "REDIRECT_URI = 'https://google.com/' #set at your developer account, usually \"http://localhost:8000\"\n",
+    "SCOPE = 'user-library-read' # or else\n",
+    "# ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
+    "\n",
+    "# then pass them:\n",
+    "\n",
+    "token = util.prompt_for_user_token(username = USERNAME, \n",
+    "                                   scope = SCOPE, \n",
+    "                                   client_id = CLIENT_ID, \n",
+    "                                   client_secret = CLIENT_SECRET, \n",
+    "                                   redirect_uri = REDIRECT_URI)\n",
+    "\n",
+    "if token:\n",
+    "   sp = spotipy.Spotify(auth=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_content = {'token': 'BQCEhCfQoAEwvw7muBWJ4fQmCKmB37d0a0PRz-FPGNHxXQjiW9YWECFFKXDYSrJ_Id_fKtA9rKnOUZJmrancJzmlxDPGBCzhQWNZ9sQK6FNfIlCyy81UVqUiWUT-2rOXkskvZXgjkqwamQMZ0Eu-3FbKxfOdxw'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(token_content)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQCEhCfQoAEwvw7muBWJ4fQmCKmB37d0a0PRz-FPGNHxXQjiW9YWECFFKXDYSrJ_Id_fKtA9rKnOUZJmrancJzmlxDPGBCzhQWNZ9sQK6FNfIlCyy81UVqUiWUT-2rOXkskvZXgjkqwamQMZ0Eu-3FbKxfOdxw'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_content['token']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_id(token):\n",
+    "    sp = spotipy.Spotify(auth=token)\n",
+    "    results = sp.current_user_saved_tracks()\n",
+    "    song_id = results['items'][0]['track']['id']\n",
+    "    return song_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_features(song_id):\n",
+    "    results_dict = sp.audio_features(song_id)[0]\n",
+    "    audio_features = {\"audio_features\":{key: results_dict[key] for key in results_dict.keys() & {'danceability', 'energy',\n",
+    "                                                                                                'key', 'loudness', 'mode',\n",
+    "                                                                                                'speechiness', 'acousticness',\n",
+    "                                                                                                'instrumentalness', 'liveness',\n",
+    "                                                                                                'valence', 'tempo', 'time_signature'}}}\n",
+    "        \n",
+    "    return audio_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " acoustical_features = get_features(get_id(token))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flask Predict function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +994,20 @@
       "Pickled scaler loaded\n",
       "Scaling dataframe object...\n",
       "Dataframe scaled\n",
-      "Loading pickled model...\n",
+      "Loading pickled model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riley\\Documents\\GitHub\\Music-Meteorologist-ds\\spotipy\\spotipy_test\\lib\\site-packages\\ipykernel_launcher.py:23: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Model loaded\n",
       "Prediction executed\n",
       "song_id_list loading...\n",
@@ -847,29 +1018,29 @@
     {
      "data": {
       "text/plain": [
-       "{'songs': [{'similarity': [0.99], 'values': '3JeSeOxS09vw7ZaQXyDtkn'},\n",
-       "  {'similarity': [0.99], 'values': '0lkEvsJLWu7HjurNUnMYqt'},\n",
-       "  {'similarity': [0.99], 'values': '7GrCeh9O4Salm3oEoiDWmf'},\n",
-       "  {'similarity': [0.99], 'values': '705JQ49YZOupAYQXrny5Vb'},\n",
-       "  {'similarity': [0.99], 'values': '7v6maEWDjrKHQMVFoL8Tq3'},\n",
-       "  {'similarity': [0.99], 'values': '6pJeuRa8dj6Hph2r9Unn5H'},\n",
-       "  {'similarity': [0.99], 'values': '1XsXX5Q8mCdlDjroYAUs8r'},\n",
-       "  {'similarity': [0.99], 'values': '6nl7z8eqCRRNSPJevUg5yJ'},\n",
-       "  {'similarity': [0.99], 'values': '4Swt07x4GyojZApyerQ8Ta'},\n",
-       "  {'similarity': [0.99], 'values': '68PGQTrsU7NTe6hfcFD3Fh'},\n",
-       "  {'similarity': [0.99], 'values': '5jTnsVnWuxdSQnRv124hwL'},\n",
-       "  {'similarity': [0.99], 'values': '5YsyWAtEDsStifCxF5d7wJ'},\n",
-       "  {'similarity': [0.99], 'values': '4RKMHiQ1sQCJVcPEbqcXR2'},\n",
-       "  {'similarity': [0.99], 'values': '7dXTqzYBW6LcuMvfmhKjeS'},\n",
-       "  {'similarity': [0.99], 'values': '1pQPfwF8yZejKeu2rZOIwI'},\n",
-       "  {'similarity': [0.99], 'values': '2ydHMFR78xJCTaUSgQsY1d'},\n",
-       "  {'similarity': [0.99], 'values': '6eUz2WehcJdZamP5qY6Dxh'},\n",
-       "  {'similarity': [0.99], 'values': '1JssSjrnWKYEHGNUJ9YgTh'},\n",
-       "  {'similarity': [0.99], 'values': '5XmLezxb1jaMurxejpKKYO'},\n",
-       "  {'similarity': [0.99], 'values': '3XDBH8yNPbCfuO5xKW1nHI'}]}"
+       "{'songs': [{'similarity': [0.99], 'values': '6UzHbPir2YDNbEiPz80Sv0'},\n",
+       "  {'similarity': [0.99], 'values': '4tWazjRxG8Dih3u8Q0xi0Y'},\n",
+       "  {'similarity': [0.99], 'values': '3Gz6x2IVyKAZsOsi7TUqIo'},\n",
+       "  {'similarity': [0.99], 'values': '7xebfKM5F78dzoIdSG5xqD'},\n",
+       "  {'similarity': [0.99], 'values': '1pThp5wzu8Lcs7izQzyhju'},\n",
+       "  {'similarity': [0.99], 'values': '70KrFx4OuJaRctXISpgmYV'},\n",
+       "  {'similarity': [0.99], 'values': '7FZdJB7R0dY8LHDNG3H0uB'},\n",
+       "  {'similarity': [0.99], 'values': '4HXjISybpBxnLGZTnkgJ18'},\n",
+       "  {'similarity': [0.99], 'values': '15Fmm7QqHSgJSefDVjgPhh'},\n",
+       "  {'similarity': [0.99], 'values': '45xGsYv9ToQJtwei3SV1FH'},\n",
+       "  {'similarity': [0.99], 'values': '65Tg0GzmFp9wQySyuv6Sc7'},\n",
+       "  {'similarity': [0.99], 'values': '0yALfeWhCfCTxdW2pCq074'},\n",
+       "  {'similarity': [0.99], 'values': '2BDYnVC9qdpM9CAKio9hc2'},\n",
+       "  {'similarity': [0.99], 'values': '5oeTtWtecBnS23RhonRKk3'},\n",
+       "  {'similarity': [0.99], 'values': '4559MuHvjvvxrAtnP45EzO'},\n",
+       "  {'similarity': [0.99], 'values': '1iynqe0qFBDGej00eLklic'},\n",
+       "  {'similarity': [0.99], 'values': '2Ee3eru5tqz7DKXswFjYmr'},\n",
+       "  {'similarity': [0.99], 'values': '0y1rwQTl03qHWPy8q4Gq3G'},\n",
+       "  {'similarity': [0.99], 'values': '2hPs2i4X4bC9dF7qU4w8xe'},\n",
+       "  {'similarity': [0.99], 'values': '4xyS7muZOcgGzLvtj1AiDw'}]}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +1048,7 @@
    "source": [
     "%timeit\n",
     "\n",
-    "predict(content)"
+    "predict(acoustical_features)"
    ]
   },
   {
@@ -972,9 +1143,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "model_notebooks",
+   "display_name": "spotipy_test",
    "language": "python",
-   "name": "model_notebooks"
+   "name": "spotipy_test"
   },
   "language_info": {
    "codemirror_mode": {
